[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/album-1.jpg" type="Texture" id=1]
[ext_resource path="res://images/BrownArrow.png" type="Texture" id=2]
[ext_resource path="res://Album.gd" type="Script" id=3]
[ext_resource path="res://images/image_placeholder-0.jpg" type="Texture" id=4]

[node name="Album" type="Node2D"]
script = ExtResource( 3 )

[node name="FundoAlbum" type="Sprite" parent="."]
scale = Vector2( 2.00205, 1.49276 )
texture = ExtResource( 1 )
centered = false

[node name="BtnAvancar" type="Button" parent="FundoAlbum"]
margin_left = 579.407
margin_top = 342.99
margin_right = 623.407
margin_bottom = 380.99
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnVoltar" type="Button" parent="FundoAlbum"]
margin_left = 63.9346
margin_top = 380.504
margin_right = 107.935
margin_bottom = 418.504
rect_rotation = -180.0
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Imagem" type="Sprite" parent="FundoAlbum"]
position = Vector2( 75.9223, 91.1067 )
scale = Vector2( 0.621586, 0.833656 )
texture = ExtResource( 4 )
centered = false
region_filter_clip = true

[node name="Texto" type="RichTextLabel" parent="FundoAlbum"]
margin_left = 347.644
margin_top = 91.1067
margin_right = 570.644
margin_bottom = 386.107
custom_colors/default_color = Color( 0.352941, 0.282353, 0.207843, 1 )
text = "Esse é o texto que será exibido para os jogadores.


Outro parágrafo está sendo criado aqui, sem nenhuma informação melhor.

Podemos quebrar ainda mais esse texto




Várias linhas puladas...



Final ?"
__meta__ = {
"_edit_use_anchors_": false
}
